@@ -1,5 +1,9 @@
 2015-05-25  Carl Hetherington  <cth@carlh.net>
 
+	* Increase the number of images that DCP-o-matic will
+	keep around in memory before resorting to pushing them
+	to disk.
+
 	* Display DCP container size beside the choice
 	in the DCP tab.
 
